# ChangeLog for x11-libs/qt-webkit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-webkit/ChangeLog,v 1.166 2012/07/30 05:20:09 pesa Exp $

  30 Jul 2012; Davide Pesavento <pesa@gentoo.org>
  +files/4.8.2-javascriptcore-x32.patch, qt-webkit-4.8.2.ebuild:
  Add patch for x32 support in JavaScriptCore (bug 424049).

  19 Jul 2012; Markus Meier <maekke@gentoo.org> qt-webkit-4.8.2.ebuild:
  arm stable, bug #424625

  15 Jul 2012; Agostino Sarubbo <ago@gentoo.org> qt-webkit-4.8.2.ebuild:
  Stable for x86, wrt bug #424625

  09 Jul 2012; Johannes Huber <johu@gentoo.org>
  -files/qt-webkit-4.6.0-solaris-strnstr.patch,
  -files/qt-webkit-4.6.3-flash-plugin-segfault.patch:
  Remove old.

  09 Jul 2012; Johannes Huber <johu@gentoo.org> -qt-webkit-4.6.3-r1.ebuild,
  -qt-webkit-4.6.3-r2.ebuild:
  Drop Qt-4.6.3

  09 Jul 2012; Joseph Jezak <josejx@gentoo.org> qt-webkit-4.8.2.ebuild:
  Marked ppc/ppc64 for bug #424625.

  06 Jul 2012; Michael Weber <xmw@gentoo.org> qt-webkit-4.8.1.ebuild:
  ppc stable (bug 414241)

  05 Jul 2012; Agostino Sarubbo <ago@gentoo.org> qt-webkit-4.8.2.ebuild:
  Stable for amd64, wrt bug #424625

  25 Jun 2012; Raúl Porcel <armin76@gentoo.org> qt-webkit-4.8.1.ebuild:
  ia64 stable wrt #414241

  19 Jun 2012; Davide Pesavento <pesa@gentoo.org>
  +files/4.8.2-qatomic-x32.patch, qt-webkit-4.8.2.ebuild:
  Add patch for x32 support in qatomic asm code (bug 420705).

  18 Jun 2012; Davide Pesavento <pesa@gentoo.org> metadata.xml,
  qt-webkit-4.8.1.ebuild, qt-webkit-4.8.2.ebuild:
  Drop "c++0x=" USE deps, sync metadata with overlay.

  09 Jun 2012; Davide Pesavento <pesa@gentoo.org> qt-webkit-4.6.3-r1.ebuild,
  qt-webkit-4.6.3-r2.ebuild, qt-webkit-4.7.4.ebuild:
  Drop redundant append-flags (already done in qt4-build.eclass).

  09 Jun 2012; Davide Pesavento <pesa@gentoo.org> qt-webkit-4.8.2.ebuild:
  Turn the libxml2[icu] blocker into a USE dep because portage displays better