@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/qt-xmlpatterns
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-xmlpatterns/ChangeLog,v 1.122 2012/07/28 06:31:09 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-xmlpatterns/ChangeLog,v 1.123 2012/09/14 08:35:50 yngwin Exp $
+
+*qt-xmlpatterns-4.8.3 (14 Sep 2012)
+
+  14 Sep 2012; Ben de Groot <yngwin@gentoo.org> +qt-xmlpatterns-4.8.3.ebuild:
+  Version bump. Drop qatomic-x32 patch applied upstream. Drop qpa useflag.
 
   28 Jul 2012; Davide Pesavento <pesa@gentoo.org> qt-xmlpatterns-4.8.2.ebuild:
   Exceptions support is not really required in qt-core, as pointed out by Homer
